--- a/templates/index.html
+++ b/templates/index.html
@@ -7,34 +7,26 @@
                 <div class="col-9">
                     <label for="">Create new task</label>
                     <input type="text" class="form-control" v-model="task.title">
-                    <ul>
-                        <li>
-                            <p>Age is: { age }</p>
-                            <input v-model="age" placeholder="age of the car" @keypress="validateNumber"/>
-                        </li>
-                        <li>
-                            <p>Mileage is: { mileage }</p>
-                            <input v-model="mileage" placeholder="mileage of the car" @keypress="validateNumber"/>
-                        </li>
-                        <li>
-                            <p>Repairments number is: { repairments }</p>
-                            <input v-model="repairments" placeholder="number of repiarments"
-                                   @keypress="validateNumber"/>
-                        </li>
-                        <li>
-                            <select v-model="selected">
-                                <option v-for="option in options" :key="option.value">
-                                    { option.text }
-                                </option>
-                            </select>
-                            <div>Selected: { selected }</div>
-                        </li>
-                    </ul>
+                    <label for="">Age of the car is: { age }</label>
+                    <input type="text" class="form-control" v-model="age" placeholder="age of the car"
+                           @keypress="validateNumber"/>
+                    <label>Mileage of the car is: { mileage }</label>
+                    <input type="text" class="form-control" v-model="mileage" placeholder="mileage of the car"
+                           @keypress="validateNumber"/>
+                    <label>Repairments number is: { repairments }</label>
+                    <input type="text" class="form-control" v-model="repairments" placeholder="number of repiarments"
+                           @keypress="validateNumber"/>
+                    <label>Brand name: { selected }</label>
+                    <select v-model="selected" class="form-control" placeholder="car brand">
+                        <option v-for="car in cars" :key="car.price">
+                            { car.brand }
+                        </option>
+                    </select>
                 </div>
-                <div class="col-auto mt-auto">
-                    <button @click="warn(age, mileage, repairments)" class="btn btn-success" type="submit">Create
-                    </button>
-                </div>
+            </div>
+            <div class="col-auto mt-auto">
+                <button @click="warn(age, mileage, repairments)" class="btn btn-success" type="submit">Create
+                </button>
             </div>
         </form>
 
