--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,34 @@
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 </head>
 <body>
+    <!-- Image and text -->
+<!--    <nav class="navbar navbar-light bg-light">-->
+<!--      <a class="navbar-brand" href="#">-->
+<!--          <img src="{{ url_for('static', filename='logo.svg') }}" width="40" height="40" class="d-inline-block align-center" alt=""/>-->
+<!--          <span class="logo-text d-inline-block">Fuzzy Car Price Estimator</span>-->
+<!--      </a>-->
+<!--    </nav>-->
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col">
+                <nav class="navbar navbar-expand-lg navbar-light">
+                  <a class="navbar-brand" href="#">
+                      <img src="{{ url_for('static', filename='logo.svg') }}" width="40" height="40" class="d-inline-block align-center" alt=""/>
+                      <span class="logo-text d-inline-block">Fuzzy Car Price Estimator</span>
+                  </a>
+                  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                      <a class="nav-item nav-link active" href="#">Evaluation</a>
+                      <a class="nav-item nav-link" href="#">History</a>
+                    </div>
+                  </div>
+                </nav>
+            </div>
+        </div>
+    </div>
 
     <div class="container">
         <div class="row">
